--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,15 @@ body {
     height: 2rem;
 }
 
+.learn_call_to_action {
+    position: absolute;
+    height: 4rem;
+    bottom: 0;
+    margin: 0.7rem auto;
+    border-radius: 30px;
+    border-color: white;
+}
+
 #testimonials,
 #projects,
 #contact {
