--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -142,23 +146,11 @@ body {
   margin-right: 1rem;
 }
 
-.card_ifra,
-.card_samekh,
-.card_falon,
-.card_chris,
-.card_sherif,
-.card_lee,
-.card_peter,
-.card_stan,
-.card_nicholas,
-.card_ibra {
+.span_2_col {
   grid-column: span 2;
 }
 
-.card_michelle,
-.card_haddassah,
-.card_holy,
-.card_joe {
+.span_2_row {
   grid-row: span 2;
 }
 
@@ -210,4 +202,12 @@ body {
 #mentor-container {
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (max-width: 910px) {
+  #testimonials-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+  }
 }
